# code-shape

./: Cargo.toml  LICENSE  README.md
examples/: foo.c  foo.py
queries/languages/: c.scm  cpp.scm  python.scm
src/: main.rs
