[package]
name = "code-shape"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahlinc/code-shape"
documentation = "https://github.com/ahlinc/code-shape"
description = "Code-shape is a tool for extracting definitions from source code files"
keywords = ["tree-sitter", "tool", "source", "code"]

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["cargo", "derive", "env", "string", "unicode", "wrap_help"] }
dirs = "5.0.0"
rust-embed = "6.6.1"
tree-sitter = "0.20.10"
tree-sitter-config = "0.19.0"
tree-sitter-loader = "0.20.0"
